8242376: update jextract samples to avoid --filter option
Reviewed-by: mcimadamore